# workbench

./: .gitignore  README.md  main.py  planning.md  pyproject.toml  requirements.txt
notebooks/: exp_data_mat_import.ipynb
rustsorter/: Cargo.toml
rustsorter/src/: main.rs  py_interface.rs  spikesorter_app.rs
rustsorter/tests/: tests.rs
workbench/: preprocess.py
workbench/data/: __init__.py  exp_mat_import.py  preprocess.py  spikesorter.py
workbench/hdf5_interface/: h5data.py  h5files.py  preprocessing.py
workbench/videography/: camera_process.py
