[project]
name = "workbench"
version = "0.1.0"
authors = "Florian Hofmann"
description = "Workstation for phd project analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5df>=0.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
